--- a/maps/templates/test.html
+++ b/maps/templates/test.html
@@ -2,18 +2,22 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>주소로 장소 표시하기</title>
+    <title>임시로 연습중임</title>
     
 </head>
 <body>
-<p style="margin-top:-12px">
-    <em class="link">
-        <a href="javascript:void(0);" onclick="window.open('http://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
-            혹시 주소 결과가 잘못 나오는 경우에는 여기에 제보해주세요.
-        </a>
-    </em>
-</p>
-<div id="map" style="width:100%;height:350px;"></div>
+
+<div id="map" style="width:100%;height:350px;">
+    <div id="registMap">
+        <div class="registMap">
+        <span id="mapAdd">주소등록</span>
+        <span id="mapRegist">저장</span>
+        <ul id="mapList"></ul>
+        </div>
+        <div id="map"></div>
+    </div>
+</div>
+
 <script type="text/javascript" src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55409a8e2e4c253540a5c7fec97d90fc&libraries=services"></script>
@@ -58,7 +62,7 @@ geocoder.addressSearch('제주특별자치도 제주시 첨단로 242', function
 
 
 
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~여러개 마커~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
@@ -110,7 +114,7 @@ for (var i = 0; i < positions.length; i ++) {
 }
 
 
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~클릭한 위치 마커~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 
@@ -171,18 +175,3 @@ kakao.maps.event.addListener(map, 'click', function(mouseEvent) {
     .mapDiv span {display:block;text-align:center;border-radius:6px;background:#fff;padding:10px 15px;font-size:14px;font-weight:bold;}
     </style>
     
-    <div id="registMap">
-        <div class="registMap">
-        <span id="mapAdd">주소등록</span>
-        <span id="mapRegist">저장</span>
-        <ul id="mapList"></ul>
-        </div>
-        <div id="map"></div>
-    </div>
-    
-
-
-
-
-
-</html>
