--- a/maps/templates/main.html
+++ b/maps/templates/main.html
@@ -1,7 +1,7 @@
 <body>
     <div id="map" style="width:100%;height:350px;"></div>
     
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55409a8e2e4c253540a5c7fec97d90fc&libraries=services"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=여기에 넣기!&libraries=services"></script>
     <script>
       var mapContainer = document.getElementById('map'), // 지도를 표시할 div
               mapOption = {
